# lsp-types

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  release.sh  release.toml
.github/workflows/: rust.yml
src/: call_hierarchy.rs  code_action.rs  code_lens.rs  color.rs  completion.rs  document_diagnostic.rs  document_highlight.rs  document_link.rs  document_symbols.rs  error_codes.rs  file_operations.rs  folding_range.rs  formatting.rs  hover.rs  inlay_hint.rs  inline_value.rs  lib.rs  lib.rs.in  linked_editing.rs  lsif.rs  notebook.rs  notification.rs  progress.rs  references.rs  rename.rs  request.rs  selection_range.rs  semantic_highlighting.rs  semantic_tokens.rs  signature_help.rs  type_hierarchy.rs  type_rename.rs  uri.rs  window.rs  workspace_diagnostic.rs  workspace_folders.rs  workspace_symbols.rs
tests/: tsc-unix.lsif
