[package]
name = "lsp-types"
version = "0.59.0"
authors = ["Markus Westerlind <marwes91@gmail.com>", "Bruno Medeiros <bruno.do.medeiros@gmail.com>"]
edition = "2018"
description = "Types for interaction with a language server, using VSCode's Language Server Protocol"

repository = "https://github.com/gluon-lang/lsp-types"
documentation = "https://docs.rs/lsp-types"

readme = "README.md"

keywords = ["language", "server", "lsp", "vscode"]

license = "MIT"

[dependencies]
num-derive = "0.2.2"
num-traits = "0.2"
bitflags = "1.0.1"
serde = "1.0.34"
serde_derive = "1.0.34"
serde_json = "1.0.0"
url = {version = "2.0.0", features = ["serde"]}

[features]
default = []
# Enables proposed LSP extensions.
# NOTE: No semver compatibility is guaranteed for types enabled by this feature.
proposed = []
